style(game-fish-init): added correct color for dark mode

--- a/components/games/game-fish/game-fish.module.css
+++ b/components/games/game-fish/game-fish.module.css
@@ -44,9 +44,11 @@
     opacity: 0;
     transform: scale(0.3);
   }
+
   10% {
     opacity: 0.8;
   }
+
   100% {
     bottom: 105%;
     opacity: 0;
@@ -77,6 +79,10 @@
   padding: 0.5rem 1.5rem;
   max-width: 90%;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+}
+
+html[data-dark-mode='true'] .init-message-box {
+  color: #000;
 }
 
 .anchor-icon {
@@ -131,10 +137,12 @@
 }
 
 @keyframes float-fish {
+
   0%,
   100% {
     transform: translateY(0) rotate(0deg);
   }
+
   50% {
     transform: translateY(-12px) rotate(3deg);
   }
@@ -145,6 +153,7 @@
   background-color: #fff3cd;
   box-shadow: 0 0 15px rgba(253, 162, 25, 0.6);
 }
+
 .selected .fish-image {
   filter: drop-shadow(0 0 12px gold) brightness(1.2);
 }
@@ -153,8 +162,10 @@
 
 /* Cuando la respuesta es CORRECTA */
 .success .fish-answer-box {
-  background-color: #d4edda; /* Verde claro */
-  border-color: #28a745; /* Verde oscuro */
+  background-color: #d4edda;
+  /* Verde claro */
+  border-color: #28a745;
+  /* Verde oscuro */
   color: #155724;
   box-shadow: 0 4px 0px #1e7e34;
 }
@@ -165,8 +176,10 @@
 
 /* Cuando la respuesta es INCORRECTA (y estaba seleccionada) */
 .wrong .fish-answer-box {
-  background-color: #f8d7da; /* Rojo claro */
-  border-color: #dc3545; /* Rojo oscuro */
+  background-color: #f8d7da;
+  /* Rojo claro */
+  border-color: #dc3545;
+  /* Rojo oscuro */
   color: #721c24;
   box-shadow: 0 4px 0px #bd2130;
 }
@@ -200,10 +213,12 @@
   flex-grow: 1;
   text-align: center;
 }
+
 .btn-start:hover {
   transform: translateY(-2px);
   filter: brightness(1.1);
 }
+
 .hidden-input {
   display: none;
 }
@@ -213,14 +228,17 @@
   .fish-image {
     width: 70px;
   }
+
   .fish-answer-box {
     min-width: 100px;
     font-size: 0.8rem;
   }
+
   .btn-start {
     width: 220px;
     font-size: 1.2rem;
   }
+
   .init-message-box {
     font-size: 0.9rem;
     padding: 0.5rem 1rem;
@@ -232,6 +250,7 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 1rem;
   }
+
   .init-container {
     min-height: 480px;
   }
@@ -283,6 +302,7 @@ html[data-dark-mode='true'] .question-text {
   0% {
     transform: scale(0);
   }
+
   100% {
     transform: scale(1);
   }
@@ -316,7 +336,8 @@ html[data-dark-mode='true'] .question-text {
 .is-not-selected {
   filter: grayscale(100%);
   opacity: 0.4;
-  pointer-events: none; /* Evita que se pueda clickear mientras está en gris */
+  pointer-events: none;
+  /* Evita que se pueda clickear mientras está en gris */
   transition: all 0.5s ease;
 }
 
